[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/game_objects/Player/placeholder_mech.png" type="Texture" id=1]
[ext_resource path="res://scenes/game_objects/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/ScannerComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game_objects/weapons/MissileLauncher/MissileLauncher.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/HealthComponent.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/HurtBoxComponent.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="HealthComponent" parent="." instance=ExtResource( 5 )]
max_health = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBoxComponent" parent="." instance=ExtResource( 6 )]
collision_layer = 2
health_component_path = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
modulate = Color( 0.329412, 1, 0, 1 )
rotation = -0.00148812
shape = SubResource( 2 )

[node name="ScannerComponent" parent="." instance=ExtResource( 3 )]
collision_mask = 4
center_node_path = NodePath("..")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Visuals"]
texture = ExtResource( 1 )

[node name="MissileLauncher" parent="Visuals" instance=ExtResource( 4 )]
position = Vector2( 5, 4 )
